		-> "Do polygon simplification": reduce the complexity of line segments, saving bandwidth and storage space. 
		-> "Keep original line polygons": copy the recognized text to the line segments without altering them.
	-> fix bug that caused image rotation according to EXIF thumbnail section
	-> remove small text-regions feature
	-> async page/transcript loading (do not show progress bar anymore)
	-> quickload of collection by id
	-> CITlab HTR: creating and storing ConfMats can be disabled if keyword spotting functionality is not required
	-> HTR models detail view bugfix: final CER values shown in text fields did not match the best net stored in all cases 
	
1.9.0:
	-> tag-search: minimum number of characters in tagname reduced to 1 (to be able to search for tags like e.g. "hi" or "p")
	-> bugfix: do *not* select underlying shape if image is moved with left mouse button
	-> ground truth management features
	-> rename test set to validation set as it is the more accurate term
	-> Allow deletion of HTR model via context menu (HTR overview table -> right-click -> Delete model...)
	-> HTR model metadata can be edited by owner/curator of model
	-> first draft of P2PaLA training (for interested early adopters only)
	-> bugfix: jumping to location of search result did not work anymore if page had to be changed
	-> bugfix: column-sensitive sorting resulted in errors -> skip those cases and sort by y-x coords only
	-> fix several layout issues
	
1.9.1:
	-> bugfix: force merge of baselines in horizontal direction
	
1.10.0:
	-> HTR ground truth data sets may be copied to a new document via right-click context menu
	-> HTR sharing dialog accessible via right-click context menu
	-> CITlab HTR configuration allows to select integrated dictionary or language model built from its train data set (available for models trained after 6.11.2018 [sic])
	-> bugfix: baselines were associated to wrong parent shapes on splitting with custom line
	